[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "make-scenario-docs"
version = "0.1.0"
description = "Make.com Scenario → Markdown + Mermaid auto-documentation"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["make_doc*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = ["tests"]
